--- a/Assign3/css/styles.css
+++ b/Assign3/css/styles.css
@@ -33,10 +33,6 @@
     background-color: rgb(253, 70, 37);
 }
 
-.background{
-    background-color: transparent;
-}
-
 
 .heading{
     font-size: 3em;
@@ -94,7 +90,7 @@ border-width: 2px;
 
 input, button{
         font-size: 1.4rem;
-        color: white;
+        color: rgb(255, 255, 255);
         padding: 5px 10px;
 }
 
