--- a/final/sass/styles.scss
+++ b/final/sass/styles.scss
@@ -16,7 +16,7 @@
 }
 
 .background-img {
-    background-image: url(../resources/img.jpeg);
+    background-image: linear-gradient(rgba(0, 149, 255, 0.75), rgba(0, 60, 255, 0.73)),url(../resources/img.jpg);; 
     background-size: cover;
     @include wdth-hgt(100vw, 100vh);
     position: absolute;
@@ -109,4 +109,24 @@
             background: transparent;
         }
     }
+}
+
+
+
+@media only screen and (max-width:500px){
+    .container{
+        .background-img{
+            background: cover;
+            @include wdth-hgt(500px, 100vh);
+        }
+
+        .nav-content-text{
+            flex-direction: column;
+            .nav-content-text-1{
+                padding: 0;
+                margin-left: 20px;
+            }
+        }
+    }
+
 }
